--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+server.servlet.context-path=/desafio-finch
+server.port=8081
+##spring.datasource.url=jdbc:mysql://localhost:3306/finchDesafio
+spring.datasource.url=jdbc:mysql://localhost:3306/finchDesafio?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
+
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
